--- a/package.json
+++ b/package.json
@@ -26,12 +26,5 @@
   },
   "homepage": "https://github.com/Darshan789/simplewebrtc-messenger.git#readme",
   "main": "server.js",
-  "devDependencies": {
-    "@now/node": "^1.5.1",
-    "express": "^4.17.1",
-    "handlebars": "^4.7.6",
-    "jquery": "^3.5.0",
-    "semantic-ui-css": "^2.4.1",
-    "simplewebrtc": "^3.0.2"
-  }
+  "devDependencies": {}
 }
