--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   "dependencies": {
     "express": "^4.17.1",
     "handlebars": "^4.7.6",
+    "instascan": "^1.0.0",
     "jquery": "^3.5.0",
     "semantic-ui-css": "^2.4.1",
-    "simplewebrtc": "^3.0.2"
+    "simplewebrtc": "^3.0.2",
+    "webrtc-adapter": "^7.5.1"
   },
   "bugs": {
     "url": "https://github.com/Darshan789/simplewebrtc-messenger.git/issues"
