--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "url": "git+ssh://git@github.com/Darshan789/simplewebrtc-messenger.git"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "express": "^4.17.1",
     "handlebars": "^4.7.6",
     "instascan": "^1.0.0",
     "jquery": "^3.5.0",
+    "now": "^18.0.0",
     "semantic-ui-css": "^2.4.1",
     "simplewebrtc": "^3.0.2",
     "webrtc-adapter": "^7.5.1"
